Corrections to exceptions on main