@@ -11,8 +11,8 @@ public class SimpleGrabURL {
 	URLConnection conn = null;
 	BufferedReader instream = null;
 	try {
-	    URL url = new URL(args[0]);
-	    conn = url.openConnection();
+	    URI uri = new URI(args[0]);
+	    conn = uri.toURL().openConnection();
 	    conn.connect();
 	    
 	    instream = new BufferedReader(new InputStreamReader(conn.getInputStream()));
@@ -20,6 +20,10 @@ public class SimpleGrabURL {
 	    while ((line = instream.readLine()) != null) {
 		System.out.println(line);
 	    }
+	}
+	catch (URISyntaxException use) {
+	    System.out.println("Invalid URL " + args[0]);
+	    use.printStackTrace();
 	}
 	catch (IOException exc) {
 	    exc.printStackTrace();
